--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -13,6 +14,7 @@
         android:id="@+id/listLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -44,7 +46,7 @@
             android:id="@+id/no_data_ImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:contentDescription="@string/todo"
+            android:contentDescription="@string/no_data"
             android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
             android:src="@drawable/ic_no_data"
             android:visibility="invisible"
@@ -61,14 +63,13 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:clickable="true"
-            android:contentDescription="@string/todo"
             android:focusable="true"
             android:navigateToAddFragment="@{true}"
             android:src="@drawable/ic_add"
-            android:tint="@color/white"
-            app:borderWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/white"
+            android:contentDescription="@string/add" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
