--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue_200">#90CAF9</color>
-    <color name="blue_500">#2196F3</color>
-    <color name="blue_800">#1565C0</color>
-    <color name="blue_gray_200">#B0BEC5</color>
-    <color name="blue_gray_700">#455A64</color>
+    <color name="purple_200">#9D46FF</color>
+    <color name="purple_500">#6200EA</color>
+    <color name="purple_800">#5502C8</color>
+    <color name="purple_300">#9D46FF</color>
+    <color name="purple_700">#9D46FF</color>
     <color name="black">#FF000000</color>
 
     <color name="white">#FFFFFF</color>
@@ -13,4 +13,5 @@
     <color name="red">#FF4646</color>
     <color name="yellow">#FFC114</color>
     <color name="green">#00C980</color>
+
 </resources>
